[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.3.1"
bevy = "0.16.1"
bevy_enhanced_input = "0.18.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
