[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.3.1"
bevy = "0.16.1"
bevy-tnua = "0.24.0"
bevy-tnua-avian3d = "0.5.0"
bevy_enhanced_input = "0.18.0"
chrono = "0.4.42"
rand = "0.9.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
